k8s/usersnjapp-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: usersnjapp-db-pod
  labels:
    app: usersnjapp-db
spec:
  containers:
  - name: usersnjapp-db
    image: postgres:latest
    ports:
    - containerPort: 5432
