k8s/usersnjapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: usersnjapp-pod
  labels:
    app: usersnjapp
spec:
  hostname: usersnjapp-pod1
  containers:
  - name: usersnjapp
    image: mycluster.icp:8500/usersnjappns/usersnjapp:latest
    ports:
    - containerPort: 3005
