k8s/usersnjapp-app-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersnjapp-app-cluster-svc
  namespace: usersnjappns
spec:
  selector:
    app: usersnjapp
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
