k8s/usersnjapp-db-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersnjapp-db-cluster-svc
  namespace: usersnjappns
spec:
  selector:
    app: usersnjapp-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
