k8s/usersnjapp-db-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersnjapp-db-np-svc
  namespace: usersnjappns  
spec:
  type: NodePort
  ports:
  - nodePort : 30432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: usersnjapp-db
