k8s/usersnjapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
 name: usersnjappsvc
 labels:
   app: usersnjapp
spec:
 ports:
 - port: 3005
   name: http
 selector:
   app: usersnjapp

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: usersnjapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: usersnjapp
    spec:
      containers:
      - image: mycluster.icp:8500/usersnjappns/usersnjapp:v1
        imagePullPolicy: IfNotPresent
        name: usersnjapp
        ports:
        - containerPort: 3005
