k8s/usersnjapp-svcnp.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersnjapp-app-np-svc
  namespace: usersnjappns  
spec:
  type: NodePort
  ports:
  - nodePort : 30100
    port: 3005
    protocol: TCP
    targetPort: 3005
  selector:
    app: usersnjapp
