k8s/usersnjapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: usersnjapp-ingress
  namespace: usersnjappns
spec:
  rules:
  - http:
      paths:
      - path: /info
        backend:
          serviceName: usersnjapp-app-cluster-svc
          servicePort: 3005
      - path: /users
        backend:
          serviceName: usersnjapp-app-cluster-svc
          servicePort: 3005
